syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.tradesystem.service";
option java_outer_classname = "TradeSystemService";
option objc_class_prefix = "HLW";

package tradeService;

//柜台service
service TradeSystem {
    // Sends a greeting
    rpc takeOrder (UserOrderRequest) returns (UserOrderReply) {}
    rpc cancelOrder (CancleOrderRequest) returns (CancleOrderReply) {}
    rpc matchOrder (MatchOrderRequest) returns (MatchOrderReply) {
    }
}

// The request message containing the user's name.
message UserOrderRequest {
  string account = 1;
  string orderType=2;
  string orderSide=3;
  string amount=4;
  string assetPair = 5;
  string price = 6;
  string assertLimit = 7;
}

// The response message containing the greetings
message UserOrderReply {
  bool state = 1;
  string orderId=2;
}

message CancleOrderRequest {
  string orderId=1;
  string account = 2;
}

message CancleOrderReply {
  bool state =1;
  bool message = 2;
}

message MatchOrderRequest {
    string buySideOrderId = 1;
    string sellSideOrderId = 2;
    string matchAmount = 3;
    string matchPrice = 4;
    string matchOrderWaterflow = 5;
}

message MatchOrderReply {
    bool state = 1;
}
//撮合系统service
