syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.tradeCore.service";
option java_outer_classname = "TradeCoreService";
package market;

service Order {
    rpc Take (TakeOrderCmd) returns (Response) {
    }
    rpc Cancel (CancelOrderCmd) returns (Response) {
    }
}

message AssetPair {
    string Asset = 1;
    string Money = 2;
}

enum OrderSide {
    SIDEUNKNOW = 0;
    ASK = 1;
    BID = 2;
}

enum OrderType {
    TYPEUNKNOW = 0;
    MARKET = 1;
    LIMIT = 2;
    BENEFITU = 3;
}

message Charge {
    string price = 1;
    string amount = 2;
    string min_deal_unit = 3;
}
enum OrderValidTimeType {
    TIMETYPEUNKNOW = 0;
    DAY = 1;
    IOC = 2;
}
message SpotTradeExt {
    string stop_price = 1;
    string min_qty = 2;
    uint32 max_price_level = 3;
    OrderValidTimeType time_in_force = 4;
}

message TakeOrderCmd {
    string uid = 1; // unique id number for order cmd
    string account = 2;
    AssetPair asset_pair = 3;
    OrderSide side = 4; // ask or bid
    OrderType type = 5; // market or limit
    Charge charge = 6;
    SpotTradeExt ext = 7;
}

message CancelOrderCmd {
    string uid = 1;
    string account = 2;
    AssetPair asset_pair = 3;
    OrderSide side = 4;
    string amount = 5;
}

message CancelOrdResp {
    CancelOrderCmd cmd = 1;
    string amount = 2;
}

message Response {
    uint32 code = 1;
    string message = 2;
    repeated CancelOrdResp resp = 3;
}